--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: martabal
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push immich
