--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,3 @@
-QBITTORENT_BASE_URL=
-QBITTORENT_PASSWORD=
-QBITTORENT_USERNAME=
+QBITTORRENT_BASE_URL=
+QBITTORRENT_PASSWORD=
+QBITTORRENT_USERNAME=
