feat: use package.json to show project infos
Signed-off-by: martin <martin.labat92@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "qbittorrent-exporter",
   "version": "0.1.6",
   "description": "export qbittorrent data to prometheus",
-  "main": "main.go",
+  "main": "src/main.go",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "go run .",
-    "dev:env" : "go run . -e",
-    "build" : "go build -o ./a.out && ./a.out",
-    "build:env" : "go build -o ./a.out && ./a.out -e"
+    "dev" : "go run ./src",
+    "dev:env" : "go run ./src -e",
+    "build" : "cd src &&  go build -o ./a.out && ./a.out",
+    "build:env" : "cd src && go build -o ./a.out && ./a.out -e"
   },
   "keywords": [
     "golang",
