--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -34,7 +34,7 @@ jobs:
           username: martabal
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push immich
+      - name: Build and push
         uses: docker/build-push-action@v3.2.0
         with:
           context: ./
