--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -8,9 +8,7 @@ on:
         type: string
 
 jobs:
-
-
-  build_push_monolith:
+  build_docker_release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,8 +16,6 @@ jobs:
         with:
           ref: 'main'
           fetch-depth: 0
-
-
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2.1.0
@@ -33,6 +29,13 @@ jobs:
         with:
           username: martabal
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v3.2.0
