feat: add ghcr.io
Signed-off-by: martabal <74269598+martabal@users.noreply.github.com>

--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -47,4 +47,6 @@ jobs:
           tags: |
             martabal/qbittorrent-exporter:${{ inputs.tags }}
             martabal/qbittorrent-exporter:latest
+            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:${{ inputs.tags }} 
+            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:latest
 
