--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,11 +18,11 @@ jobs:
           fetch-depth: 0
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2.1.0
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v2.2.1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -41,12 +41,11 @@ jobs:
         uses: docker/build-push-action@v3.2.0
         with:
           context: ./
-          file: ./Dockerfile
           platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             martabal/qbittorrent-exporter:${{ inputs.tags }}
             martabal/qbittorrent-exporter:latest
-            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:${{ inputs.tags }} 
-            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:latest
+            ghcr.io/martabal/qbittorrent-exporter:${{ inputs.tags }} 
+            ghcr.io/martabal/qbittorrent-exporter:latest
 
