--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,10 +35,10 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v3.2.0
+        uses: docker/build-push-action@v4
         with:
           context: ./
           platforms: linux/arm/v7,linux/amd64,linux/arm64
@@ -46,6 +46,6 @@ jobs:
           tags: |
             martabal/qbittorrent-exporter:${{ inputs.tags }}
             martabal/qbittorrent-exporter:latest
-            ghcr.io/martabal/qbittorrent-exporter:${{ inputs.tags }} 
-            ghcr.io/martabal/qbittorrent-exporter:latest
+            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:${{ inputs.tags }} 
+            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:latest
 
