--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Test
-        run: go test -v ./src
+        run: go test -v ./src/tests
