--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Test
+      - name: Run unit tests
         run: go test -v ./src/tests
+      - name: Run formatter
+        run: test -z $(gofmt -l ./src)
