--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "qbittorrent-exporter",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Export your qbittorrent data to prometheus",
   "main": "src/init.go",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "go test -v ./src/tests",
     "dev" : "go run ./src",
     "dev:env" : "go run ./src -e",
     "build" : "go build -o ./qbittorrent-exporter.out ./src && ./qbittorrent-exporter.out -e",
