--- a/.github/workflows/codql-analysis.yml
+++ b/.github/workflows/codql-analysis.yml
@@ -23,12 +23,15 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
+
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
 
     - name: CodeQL Analysis
       uses: github/codeql-action/analyze@v2
