fix codeql analysis (#14)
* fix codeql analysis

Signed-off-by: martabal <74269598+martabal@users.noreply.github.com>

* update

Signed-off-by: martabal <74269598+martabal@users.noreply.github.com>

---------

Signed-off-by: martabal <74269598+martabal@users.noreply.github.com>

--- a/.github/workflows/codql-analysis.yml
+++ b/.github/workflows/codql-analysis.yml
@@ -30,5 +30,10 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: CodeQL Analysis
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+
+    - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:${{matrix.language}}"
