--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       tags:
-        description: 'version'
+        description: "version"
         required: true
         type: string
 
@@ -14,8 +14,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: 'main'
+          ref: "main"
           fetch-depth: 0
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/martabal/qbittorrent-exporter
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=sha
+            type=raw,value=${{ inputs.tags }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -29,7 +40,7 @@ jobs:
         with:
           username: martabal
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -43,9 +54,5 @@ jobs:
           context: ./
           platforms: linux/arm/v7,linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            martabal/qbittorrent-exporter:${{ inputs.tags }}
-            martabal/qbittorrent-exporter:latest
-            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:${{ inputs.tags }} 
-            ghcr.io/${{ github.repository_owner }}/qbittorrent-exporter:latest
-
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
