ci: add automatic release

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,8 +4,15 @@ on:
     inputs:
       tags:
         description: "version"
-        required: true
+        required: false
         type: string
+  release:
+    types:
+      - created
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build_docker_release:
@@ -17,6 +24,16 @@ jobs:
           ref: "main"
           fetch-depth: 0
 
+      - name: Release tag
+        id: releasetag
+        run: |
+          if [ -z "${{ inputs.tag }}" ]; then
+            latest_release_tag=$(curl -s "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/latest" | jq -r .tag_name)
+            echo "release_tag=${latest_release_tag}" >> $GITHUB_ENV
+          else
+            echo "release_tag=${{ inputs.tag }}" >> $GITHUB_ENV
+          fi
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -24,9 +41,9 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=latest,enable=true
             type=sha
-            type=raw,value=${{ inputs.tags }}
+            type=raw,value=${{ steps.releasetag.outputs.release_tag }},enable=true
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -40,6 +57,7 @@ jobs:
         with:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+        if: ${{ github.event_name == 'release' || github.event_name == 'workflow_dispatch' }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -47,6 +65,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_TOKEN }}
+        if: ${{ github.event_name == 'release' || github.event_name == 'workflow_dispatch' }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -56,3 +75,4 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+        if: ${{ github.event_name == 'release' || github.event_name == 'workflow_dispatch' }}
