--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build_docker_release:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
