--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build_docker_release:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,7 +32,6 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
           tags: |
             type=raw,value=latest,enable=${{ github.event_name == 'release' }}
-            type=sha
             type=ref,event=branch
             type=ref,event=pr
             type=raw,value=${{ inputs.tags }},enable=${{ github.event_name == 'workflow_dispatch' }}
