--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,5 @@
-name: docker
+name: Docker Build
+
 on:
   workflow_dispatch:
     inputs:
@@ -65,3 +66,4 @@ jobs:
           push: ${{ !github.event.pull_request.head.repo.fork }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: PROJECT_VERSION=${{ inputs.tags }}
