refactor: project structure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Build
-        run: go build -o ./qbittorrent-exporter.out ./src
+        run: make build
