--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run unit tests
-        run: go test -v ./src/tests
+        run: make test
 
       - name: Run formatter
-        run: test -z $(gofmt -l ./src)
+        run: cd src && test -z $(gofmt -l .)
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55.2
+          working-directory: src
