--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         run: go get .
 
       - name: Run unit tests
-        run: go test -v ./tests
+        run: go test -v ./...
 
       - name: Run formatter
         run: test -z $(gofmt -l .)
