--- a/.github/workflows/codql-analysis.yml
+++ b/.github/workflows/codql-analysis.yml
@@ -1,11 +1,14 @@
 name: CodeQL
-
 on:
   workflow_dispatch:
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   analyze:
