--- a/.env.exemple
+++ b/.env.exemple
@@ -2,6 +2,12 @@ QBITTORRENT_BASE_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
 EXPORTER_PORT=
-LOG_LEVEL=INFO
+LOG_LEVEL=
+QBITTORRENT_TIMEOUT=
+
+## features
 DISABLE_TRACKER=false
 ENABLE_HIGH_CARDINALITY=false
+
+## experimental features
+ENABLE_LABEL_WITH_HASH=false
