--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
-    name: Run tests
+  lint-and-format:
+    name: Run linters and formatters
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -27,22 +27,9 @@ jobs:
         with:
           go-version: "1.23.2"
 
-      - name: Install dependencies
-        run: go get .
-
-      - name: Run unit tests
-        run: go test -v ./...
-        if: ${{ !cancelled() }}
-
       - name: Run formatter
         run: test -z $(gofmt -l .)
         if: ${{ !cancelled() }}
-
-      - name: Run Hadolint
-        uses: hadolint/hadolint-action@v3.1.0
-        if: ${{ !cancelled() }}
-        with:
-          dockerfile: Dockerfile
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
@@ -50,3 +37,58 @@ jobs:
         with:
           version: v1.61.0
           working-directory: src
+
+  hadolint:
+    name: Run hadolint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Hadolint
+        uses: hadolint/hadolint-action@v3.1.0
+        if: ${{ !cancelled() }}
+        with:
+          dockerfile: Dockerfile
+
+  unit_tests:
+    name: Run unit tests
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.2"
+
+      - name: Run unit tests
+        run: go test -cover -coverprofile=coverage.txt ./... && mv coverage.txt ..
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage
+          path: coverage.txt
+
+  # code_coverage:
+  #   name: "Code coverage report"
+  #   if: github.event_name == 'pull_request'
+  #   runs-on: ubuntu-latest
+  #   needs: unit_tests
+  #   permissions:
+  #     contents: read
+  #     actions: read
+  #     pull-requests: write
+
+  #   steps:
+  #     - uses: fgrosse/go-coverage-report@v1.2.0
+  #       with:
+  #         coverage-artifact-name: "code-coverage"
+  #         coverage-file-name: "coverage.txt"
