--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,26 +69,4 @@ jobs:
           go-version: "1.23.2"
 
       - name: Run unit tests
-        run: go test -cover -coverprofile=coverage.txt ./... && mv coverage.txt ..
-
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v4
-        with:
-          name: code-coverage
-          path: coverage.txt
-
-  # code_coverage:
-  #   name: "Code coverage report"
-  #   if: github.event_name == 'pull_request'
-  #   runs-on: ubuntu-latest
-  #   needs: unit_tests
-  #   permissions:
-  #     contents: read
-  #     actions: read
-  #     pull-requests: write
-
-  #   steps:
-  #     - uses: fgrosse/go-coverage-report@v1.2.0
-  #       with:
-  #         coverage-artifact-name: "code-coverage"
-  #         coverage-file-name: "coverage.txt"
+        run: go test
