feat: allow configuring TLS settings through env vars (#105)
* feat: allow configuring TLS settings through env vars

- Add a certificate authority
- Skip certificate validation
- Set minimum TLS version

* feat: log weird TLS configuration

* feat: keep `http.Client` for connection reuse

* test: add tests for TLS configuration

These were partially generated using the `Claude 3.5 Sonnet` LLM.

* feat: more checks and warnings for TLS config

* feat: show which env var caused the panic/warning

* test: discard server logs where errors are expected

* fix: apply suggestions

* feat: add info about TLS env vars to readme and example `.env`

* fix: remove support for TLSv1.0/1.1 and make TLSv1.3 the default

--- a/.env.exemple
+++ b/.env.exemple
@@ -11,3 +11,8 @@ ENABLE_HIGH_CARDINALITY=false
 
 ## experimental features
 ENABLE_LABEL_WITH_HASH=false
+
+## tls configuration
+CERTIFICATE_AUTHORITY_PATH=
+INSECURE_SKIP_VERIFY=false
+MIN_TLS_VERSION=TLS_1_3
