ci: add `staticcheck` step to test ci-job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,3 +50,11 @@ jobs:
         with:
           version: v1.63.4
           working-directory: src
+
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1
+        if: ${{ !cancelled() }}
+        with:
+          version: latest
+          install-go: false
+          working-directory: src
