--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
         uses: dominikh/staticcheck-action@v1
         if: ${{ !cancelled() }}
         with:
-          version: latest
+          version: v0.5.1
           install-go: false
           working-directory: src
 
