ci: add `staticcheck` linter (#106)
* ci: add `staticcheck` to `lint` job

* ci: add `staticcheck` step to test ci-job

* fix: `staticcheck` lints

* ci: move `staticcheck` before `golangci-lint` because it takes less time

* fix: pin version of `staticcheck`

Co-authored-by: martin <74269598+martabal@users.noreply.github.com>

---------

Co-authored-by: martin <74269598+martabal@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,14 @@ jobs:
         with:
           dockerfile: Dockerfile
 
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1
+        if: ${{ !cancelled() }}
+        with:
+          version: v0.5.1
+          install-go: false
+          working-directory: src
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         if: ${{ !cancelled() }}
