--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,5 @@
+QBITTORRENT_BASIC_AUTH_USERNAME=
+QBITTORRENT_BASIC_AUTH_PASSWORD=
 QBITTORRENT_BASE_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
