New feature flag to allow empty basic auth username and password

--- a/.env.exemple
+++ b/.env.exemple
@@ -10,6 +10,7 @@ QBITTORRENT_TIMEOUT=
 ## features
 DISABLE_TRACKER=false
 ENABLE_HIGH_CARDINALITY=false
+ENABLE_QBITTORRENT_BASIC_AUTH_REQUEST_HEADER=false
 
 ## experimental features
 ENABLE_LABEL_WITH_HASH=false
