Allow empty username/password

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,8 +1,8 @@
-QBITTORRENT_BASIC_AUTH_USERNAME=
-QBITTORRENT_BASIC_AUTH_PASSWORD=
 QBITTORRENT_BASE_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
+# QBITTORRENT_BASIC_AUTH_USERNAME=
+# QBITTORRENT_BASIC_AUTH_PASSWORD=
 EXPORTER_PORT=
 LOG_LEVEL=
 QBITTORRENT_TIMEOUT=
@@ -10,7 +10,6 @@ QBITTORRENT_TIMEOUT=
 ## features
 DISABLE_TRACKER=false
 ENABLE_HIGH_CARDINALITY=false
-ENABLE_QBITTORRENT_BASIC_AUTH_REQUEST_HEADER=false
 
 ## experimental features
 ENABLE_LABEL_WITH_HASH=false
