--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,8 @@
 QBITTORRENT_BASE_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
+# QBITTORRENT_BASIC_AUTH_USERNAME=
+# QBITTORRENT_BASIC_AUTH_PASSWORD=
 EXPORTER_PORT=
 LOG_LEVEL=
 QBITTORRENT_TIMEOUT=
