feat: new env to enable increased cardinality

--- a/.env.exemple
+++ b/.env.exemple
@@ -9,6 +9,7 @@ QBITTORRENT_TIMEOUT=
 
 ## features
 DISABLE_TRACKER=false
+ENABLE_INCREASED_CARDINALITY=false
 ENABLE_HIGH_CARDINALITY=false
 
 ## experimental features
