--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,12 +20,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 #v5.5.0
         with:
-          go-version: "1.24.3"
+          go-version: "1.24.4"
 
       - name: Install dependencies
         run: go get .
@@ -39,13 +39,13 @@ jobs:
         if: ${{ !cancelled() }}
 
       - name: Run Hadolint
-        uses: hadolint/hadolint-action@v3.1.0
+        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf #v3.1.0
         if: ${{ !cancelled() }}
         with:
           dockerfile: Dockerfile
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 #v8.0.0
         if: ${{ !cancelled() }}
         with:
           args: --config=.golangci.yml --issues-exit-code=0
