Add ENABLE_TRACKER_LABEL Option to add trackers to qbittorrent_torrent_* metrics label

--- a/.env.exemple
+++ b/.env.exemple
@@ -8,7 +8,8 @@ LOG_LEVEL=
 QBITTORRENT_TIMEOUT=
 
 ## features
-DISABLE_TRACKER=false
+ENABLE_TRACKER=true
+ENABLE_TRACKER_LABEL=false
 ENABLE_INCREASED_CARDINALITY=false
 ENABLE_HIGH_CARDINALITY=false
 
