Add documentation and logging

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 QBITTORRENT_BASE_URL=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
+# QBITTORRENT_PASSWORD_FILE=
 # QBITTORRENT_BASIC_AUTH_USERNAME=
 # QBITTORRENT_BASIC_AUTH_PASSWORD=
 EXPORTER_PORT=
