fix: torrent with tags

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ ENABLE_HIGH_CARDINALITY=false
 
 ## experimental features
 ENABLE_LABEL_WITH_HASH=false
+ENABLE_LABEL_WITH_TAG=false
 ENABLE_LABEL_WITH_TRACKER=true
 
 ## tls configuration
