--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,12 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
-    name: Run tests
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./src
-
+        working-directory: src
     steps:
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 #v5.0.0
@@ -27,26 +26,51 @@ jobs:
         with:
           go-version-file: "src/go.mod"
 
-      - name: Install dependencies
-        run: go get .
+      - name: Restore Go cache
+        uses: actions/cache/restore@0400d5f644dc74513175e3cd8d07132dd4860809 #v4.2.4
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('go.mod') }}
 
       - name: Run unit tests
         run: go test -v ./...
-        if: ${{ !cancelled() }}
+
+  formatter:
+    name: Run Go Formatter
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 #v5.0.0
 
       - name: Run formatter
-        run: test -z $(gofmt -l .)
-        if: ${{ !cancelled() }}
+        run: test -z "$(gofmt -l .)"
+
+  hadolint:
+    name: Run Hadolint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 #v5.0.0
 
       - name: Run Hadolint
         uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5 #v3.3.0
-        if: ${{ !cancelled() }}
         with:
           dockerfile: Dockerfile
 
-      - name: golangci-lint
+  golangci-lint:
+    name: Run GolangCI-Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 #v5.0.0
+
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 #v8.0.0
-        if: ${{ !cancelled() }}
         with:
           version: v2.4.0
           working-directory: src
