--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,5 +83,20 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 #v8.0.0
         with:
-          version: v2.5.0
+          version: v2.6.1
           working-directory: src
+
+  typos:
+    name: Typos
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 #v5.0.0
+        with:
+          persist-credentials: false
+
+      - name: Spell check code
+        uses: crate-ci/typos@80c8a4945eec0f6d464eaf9e65ed98ef085283d1
