--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
         patterns:
           - "*"
   - package-ecosystem: "gomod"
-    directory: "src/"
+    directory: "/"
     schedule:
       interval: "weekly"
     groups:
